[tool.poetry]
name = "streamlit-example"
version = "0.1.0"
description = ""
authors = ["sithankanna <sithankanna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.27.0"
pandas = "<=1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
